Revert "Add transaction status."
This reverts commit 36bdd9e8c5104d7d8947a920e38f990c3602db09.

--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2019-12-05 15:11+0000\n"
-"PO-Revision-Date: 2019-12-05 15:11+0000\n"
+"POT-Creation-Date: 2019-10-31 15:05+0400\n"
+"PO-Revision-Date: 2019-10-31 15:05+0400\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -12,6 +12,28 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+msgid "Content type"
+msgstr "კონტენტის ტიპი"
+msgid "Content type"
+msgstr "კონტენტის ტიპი"
+
+msgid "Vocabulary"
+msgstr "ლექსიკონი"
+
+msgid "Description"
+msgstr "აღწერა"
+
+msgid "User"
+msgstr "მომხმარებელი"
+
+msgid "Content"
+msgstr "კონტენტი"
+
+msgid "Donation"
+msgstr "შემოწირულობა"
+
+msgid "Block"
+msgstr "ბლოკი"
 msgid "Enter your email address or username."
 msgstr ""
 "შეიყვანეთ თქვენი "
@@ -4187,7 +4209,9 @@ msgstr ""
 "მიზანი ან პოლიტიკოსი"
 
 msgid "Amount of money"
-msgstr "თანხა"
+msgstr ""
+"ტრანზაქცია უარყოფილია "
+"სადეთ თავიდან"
 
 msgid "Transaction failed ,try again"
 msgstr ""
@@ -4254,6 +4278,39 @@ msgstr "პოლიტიკოსთა რეიტინგი"
 msgid "Party list weight"
 msgstr "პარტიული წონა"
 
+msgid "Transaction failed ,try again"
+msgstr ""
+"ტრანზაქცია უარყოფილია "
+"სადეთ თავიდან"
+
+msgid "Donated amount"
+msgstr "შემოწირული თანხა"
+msgid "This login can be used only once."
+msgstr ""
+"ამ ლინკით სარგებლობას "
+"შეძლებთ მხოლოდ ერთხელ."
+
+msgid ""
+"<p>This is a one-time login for %user_name and will expire on "
+"%expiration_date.</p><p>Click on this button to log in to the site and "
+"change your password.</p>"
+msgstr ""
+"<p> %user_name, ეს არის ერთჯერადი "
+"აუთენთიფიკაციის ფორმა, "
+"რომლის გამოყენების ვადაც "
+"იწურება %expiration_date. </p> <p>ღილაკზე "
+"დაჭერით შეძლებთ "
+"სისტემაში შესვლას და "
+"პაროლის გამოცვლას. </p>"
+
+msgid ""
+"You have just used your one-time login link. It is no longer necessary "
+"to use this link to log in. Please change your password."
+msgstr ""
+"თქვენ წარმატებით "
+"შეხვედით საიტზე. გთხოვთ "
+"შეცვალოთ პაროლი."
+
 msgid "Your new password has been saved."
 msgstr ""
 "პაროლი წარმატებით "
@@ -4286,25 +4343,19 @@ msgstr ""
 "საინვესტიციო თანხა უნდა "
 "შეადგენდეს 10K დოლარს."
 
-msgid "Donated amount"
-msgstr "შემოწირული თანხა"
-
 msgid "Regular donation settings"
 msgstr ""
 "ავტომატური დაფინანსების "
 "მართვა"
 
-msgid "Next payment date"
-msgstr "მომდევნო გადახდის თარიღი"
+msgid "1 Month"
+msgstr "1 თვე"
 
-msgid "Every month"
-msgstr "ყოველ თვე"
+msgid "3 Month"
+msgstr "3 თვე"
 
-msgid "Once in every 3 months"
-msgstr "3 თვეში ერთხელ"
-
-msgid "Once in every 6 months"
-msgstr "6 თვეში ერთხელ"
+msgid "6 Month"
+msgstr "6 თვე"
 
 msgid "Resume"
 msgstr "გაგრძელება"
@@ -4318,20 +4369,11 @@ msgstr "შეჩერება"
 msgid "ACTIVE"
 msgstr "აქტიური"
 
-msgid "Donations history"
-msgstr "გადახდების ისტორია"
-
-msgid "1 Month"
-msgstr "1 თვე"
-
-msgid "3 Month"
-msgstr "3 თვე"
-
-msgid "6 Month"
-msgstr "6 თვე"
-
 msgid "Regular donation was activated"
 msgstr "შემოწირულობა"
+
+msgid "Next payment date"
+msgstr "მომდევნო გადახდის თარიღი"
 
 msgid "Payment execution date"
 msgstr "თანხის ჩამოჭრის თარიღი"
@@ -4349,6 +4391,9 @@ msgid "Donation has been changed."
 msgstr ""
 "დონაცია წარმატებით "
 "შეიცვალა"
+
+msgid "Donations history"
+msgstr "გადახდების ისტორია"
 
 msgid "Donations"
 msgstr "გადახდები"
@@ -4383,7 +4428,6 @@ msgstr ""
 "ცვლილება ძალაში შევა "
 "შემდეგი გადახდიდან."
 
-
 msgid "Transaction history"
 msgstr "გადახდების ისტორია"
 msgid "Donated amount"
@@ -4392,20 +4436,14 @@ msgid "Invalid phone number."
 msgstr ""
 "ტელეფონის ნომერი არ არის "
 "ვალიდური."
+msgid "Donated amount"
+msgstr "შემოწირული თანხა"
 
-msgid ""
-"Date of birthYour current password is missing or incorrect; it's "
-"required to change the %name."
-msgstr ""
-"პაროლის ველი ცარიელია ან "
-"არასწორად არის შეყვანილი. "
-"პაროლი სავალდებულოა "
-"%ელ-ფოსტის შესაცვლელად."
+msgid "Every month"
+msgstr "ყოველ თვე"
 
-msgid "Invalid phone number."
-msgstr ""
-"ტელეფონის ნომერი არ არის "
-"ვალიდური."
+msgid "Once in every 3 months"
+msgstr "3 თვეში ერთხელ"
 
 msgid "Once in every 6 months"
 msgstr "6 თვეში ერთხელ"
