--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2019-12-22 21:16+0000\n"
-"PO-Revision-Date: 2019-12-22 21:16+0000\n"
+"POT-Creation-Date: 2019-12-23 11:07+0000\n"
+"PO-Revision-Date: 2019-12-23 11:07+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -4173,4 +4173,10 @@ msgstr "ტოპ რეფერალები"
 
 msgid "Referral benefits"
 msgstr "რეფერალური სარგებელი"
+
+msgid "You can't change your referral within one year from "
+msgstr ""
+"რეფერალის შეცვლა "
+"შეუძლებელია მითითებულ "
+"თარიღამდე: "
 
