--- a/config/sync/language/ka/views.view.referral_transaction.yml
+++ b/config/sync/language/ka/views.view.referral_transaction.yml
@@ -2,11 +2,11 @@ display:
   page_2:
     display_options:
       fields:
-        field_referral_1:
-          label: მომხმარებელი
-        field_referral:
-          label: რეფერალი
         field_amount_of_money:
           label: 'რეფერალური სარგებელი'
         amount:
           label: თანხა
+        field_user_1:
+          label: მომხმარებელი
+        field_user:
+          label: 'სახელი და გვარი'
