--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2020-01-14 12:45+0000\n"
-"PO-Revision-Date: 2020-01-14 12:45+0000\n"
+"POT-Creation-Date: 2020-01-15 17:24+0000\n"
+"PO-Revision-Date: 2020-01-15 17:24+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -4221,6 +4221,15 @@ msgstr "რეფერალური ტრანზაქციები"
 msgid ""
 "Your password has been successfully changed. Please log in into your "
 "account with new password"
+msgstr ""
+"თქვენი პაროლი წარმატებით "
+"შეიცვალა. გთხოვთ გაიაროთ "
+"ავტორიზაცია ახალი "
+"პაროლით."
+
+msgid ""
+"Your password has been successfully changed. Please log in into your "
+"account with new password."
 msgstr ""
 "თქვენი პაროლი წარმატებით "
 "შეიცვალა. გთხოვთ გაიაროთ "
