--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2020-01-14 12:45+0000\n"
-"PO-Revision-Date: 2020-01-14 12:45+0000\n"
+"POT-Creation-Date: 2020-01-16 11:53+0000\n"
+"PO-Revision-Date: 2020-01-16 11:53+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -4218,6 +4218,12 @@ msgstr "რეფერალური სარგებელი"
 msgid "Referral transactions"
 msgstr "რეფერალური ტრანზაქციები"
 
+msgid "My credit cards"
+msgstr "ჩემი ბარათები"
+
+msgid "Execution date"
+msgstr "ჩამოჭრის თარიღი"
+
 msgid ""
 "Your password has been successfully changed. Please log in into your "
 "account with new password"
@@ -4227,14 +4233,8 @@ msgstr ""
 "ავტორიზაცია ახალი "
 "პაროლით."
 
-msgid "My credit cards"
-msgstr "ჩემი ბარათები"
-
 msgid "Delete card"
 msgstr "ბარათის წაშლა"
-
-msgid "Execution date"
-msgstr "ჩამოჭრის თარიღი"
 
 msgid "Regular donation was successfully updated"
 msgstr ""
@@ -4254,3 +4254,12 @@ msgstr ""
 "ავტომატური დაფინანსება "
 "რომელიც მოცემულ ბარათზეა "
 "მიბმული"
+
+msgid "My cards"
+msgstr "ჩემი ბარათები"
+
+msgid "Credit car was successfully saved"
+msgstr ""
+"ბარათი წარმატებით "
+"დაემატა"
+
