--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2020-02-05 14:54+0000\n"
-"PO-Revision-Date: 2020-02-05 14:54+0000\n"
+"POT-Creation-Date: 2020-02-06 09:45+0000\n"
+"PO-Revision-Date: 2020-02-06 09:45+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -4316,4 +4316,14 @@ msgstr "ვალუტა"
 
 msgid "I agree on publicity"
 msgstr "თანახმა ვარ საჯაროობაზე"
+
+msgid ""
+"If you want your activities to appear in party list, you need to check "
+"\"I agree on publicity\" on your profile."
+msgstr ""
+"თქვენი ქმედება რომ "
+"აისახოს პარტიულ სიაში, "
+"ამისთვის თქვენს პროფილზე "
+"მონიშნული უნდა გქონდეთ "
+"\"თანახმა ვარ საჯაროობაზე\"."
 
