--- a/custom-translations/ka.po
+++ b/custom-translations/ka.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2020-02-10 15:11+0000\n"
-"PO-Revision-Date: 2020-02-10 15:11+0000\n"
+"POT-Creation-Date: 2020-02-21 15:31+0000\n"
+"PO-Revision-Date: 2020-02-21 15:31+0000\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -12,23 +12,97 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-msgid "Content type"
-msgstr "კონტენტის ტიპი"
+msgid "Enter your email address or username."
+msgstr ""
+"შეიყვანეთ თქვენი "
+"ელ.ფოსტის მისამართი"
+
+msgid "Email or username"
+msgstr "შეიყვანეთ ელ.ფოსტა "
+
+msgid "Enter the password that accompanies your email address."
+msgstr "შეიყვანეთ პაროლი "
+
+msgid "Password"
+msgstr "პაროლი"
+
+msgid "Log in"
+msgstr "შესვლა"
+
+msgid "Add effect"
+msgstr "ეფექტის დამატება"
+
+msgid "Save configuration"
+msgstr "კონფიგურაციის შენახვა"
+
+msgid "Confirm"
+msgstr "დადასტურება"
+
+msgid "Filter"
+msgstr "ფილტრი"
+
+msgid "Submit"
+msgstr "დადასტურება"
+
+msgid "Search"
+msgstr "ძიება"
+
+msgid "Settings"
+msgstr "პარამეტრები"
+
+msgid "Upload"
+msgstr "ატვირთვა"
+
+msgid "Delete"
+msgstr "წაშლა"
+
+msgid "Remove"
+msgstr "ამოშლა"
+
+msgid "Add"
+msgstr "დამატება"
+
+msgid "Create"
+msgstr "შექმნა"
+
+msgid "Install"
+msgstr "დაყენება"
+
+msgid "Save"
+msgstr "შენახვა"
+
+msgid "Export"
+msgstr "ექსპორტი"
+
+msgid "Import"
+msgstr "იმპორტი"
+
+msgid "Update"
+msgstr "განახლება"
+
+msgid "Manage"
+msgstr "მართვა"
+
+msgid "Configure"
+msgstr "კონფიგურირება"
+
+msgid "Download"
+msgstr "გადმოტვირთვა"
+
+msgid "Edit"
+msgstr "რედაქტირება"
+
+msgid "Cancel"
+msgstr "გაუქმება"
+
+msgid "Block"
+msgstr "ბლოკი"
 
 msgid "Vocabulary"
 msgstr "ლექსიკონი"
 
-msgid "Description"
-msgstr "აღწერა"
-
-msgid "User"
-msgstr "მომხმარებელი"
-
-msgid "Donation"
-msgstr "შემოწირულობა"
-
-msgid "Block"
-msgstr "ბლოკი"
+msgid "Home"
+msgstr "მთავარი"
 
 msgid "Text format"
 msgstr "ტექსტის ფორმატი"
@@ -36,8 +110,8 @@ msgstr "ტექსტის ფორმატი"
 msgid "Language"
 msgstr "ენა"
 
-msgid "Page"
-msgstr "გვერდი"
+msgid "Content type"
+msgstr "კონტენტის ტიპი"
 
 msgid "Menu"
 msgstr "მენიუ"
@@ -48,14 +122,23 @@ msgstr "როლი"
 msgid "Date format"
 msgstr "თარიღის ფორმატი"
 
-msgid "Add"
-msgstr "დამატება"
+msgid "Create new account"
+msgstr "რეგისტრაცია"
+
+msgid "Reset your password"
+msgstr "პაროლის აღდგენა"
+
+msgid "Description"
+msgstr "აღწერა"
+
+msgid "Content"
+msgstr "კონტენტი"
+
+msgid "User"
+msgstr "მომხმარებელი"
 
 msgid "Forms"
 msgstr "ფორმები"
-
-msgid "Home"
-msgstr "მთავარი"
 
 msgid "User interface"
 msgstr "მომხმარებლის ინტერფეისი"
@@ -74,9 +157,6 @@ msgstr "მომხმარებელი"
 
 msgid "Pages"
 msgstr "გვერდები"
-
-msgid "Save configuration"
-msgstr "კონფიგურაციის შენახვა"
 
 msgid "delete"
 msgstr "წაშლა"
@@ -104,17 +184,8 @@ msgstr "სუფიქსი"
 msgid "Approve"
 msgstr "დადასტურება"
 
-msgid "Delete"
-msgstr "წაშლა"
-
-msgid "Submit"
-msgstr "დადასტურება"
-
 msgid "Operations"
 msgstr "ოპერაციები"
-
-msgid "Content"
-msgstr "კონტენტი"
 
 msgid "Attribute"
 msgstr "ატრიბუტი"
@@ -169,15 +240,6 @@ msgstr "ოპერაციები"
 
 msgid "disabled"
 msgstr "გამორთულია"
-
-msgid "Confirm"
-msgstr "დადასტურება"
-
-msgid "Cancel"
-msgstr "გაუქმება"
-
-msgid "Remove"
-msgstr "ამოშლა"
 
 msgid "Last comment"
 msgstr "ბოლო კომენტრარი"
@@ -247,9 +309,6 @@ msgstr "მთავარი გვერდი"
 msgid "Home page"
 msgstr "მთავარი გვერდი"
 
-msgid "Download"
-msgstr "გადმოტვირთვა"
-
 msgid "Version"
 msgstr "ვერსია"
 
@@ -277,9 +336,6 @@ msgstr "ფაილის მდებარეობა"
 msgid "Advanced options"
 msgstr "დამატებითი ოფციები"
 
-msgid "Edit"
-msgstr "რედაქტირება"
-
 msgid "Date"
 msgstr "თარიღი"
 
@@ -288,9 +344,6 @@ msgstr "ზომა"
 
 msgid "Links"
 msgstr "ბმულები"
-
-msgid "Search"
-msgstr "ძიება"
 
 msgid "Daily"
 msgstr "ყოველდღიური"
@@ -316,9 +369,6 @@ msgstr "შეტყობინება"
 msgid "Account Name"
 msgstr "მომხმარებლის სახელი"
 
-msgid "Password"
-msgstr "პაროლი"
-
 msgid "Block settings"
 msgstr "ბლოკის პარამეტრები"
 
@@ -340,6 +390,9 @@ msgstr "სურათი"
 msgid "Types"
 msgstr "ტიპები"
 
+msgid "Hierarchy"
+msgstr "იერარქია"
+
 msgid "Required"
 msgstr "სავალდებულო"
 
@@ -354,9 +407,6 @@ msgstr "კატეგორია"
 
 msgid "Add container"
 msgstr "კონტეინერის დამატება"
-
-msgid "Settings"
-msgstr "პარამეტრები"
 
 msgid "Name"
 msgstr "სახელი"
@@ -376,14 +426,8 @@ msgstr "მშობელ გვერდზე გადასვლა"
 msgid "Go to next page"
 msgstr "შემდეგ გვერდზე გადასვლა"
 
-msgid "Import"
-msgstr "იმპორტი"
-
 msgid "Book"
 msgstr "წიგნი"
-
-msgid "Export"
-msgstr "ექსპორტი"
 
 msgid "settings"
 msgstr "პარამეტრები"
@@ -402,9 +446,6 @@ msgstr "დახმარება"
 
 msgid "Image settings"
 msgstr "სურათის პარამეტრები"
-
-msgid "Update"
-msgstr "განახლება"
 
 msgid "Open"
 msgstr "ღია"
@@ -490,9 +531,6 @@ msgstr "ფორუმის სახელი"
 msgid "forum"
 msgstr "ფორუმი"
 
-msgid "Manage"
-msgstr "მართვა"
-
 msgid "Refresh"
 msgstr "განახლება"
 
@@ -544,9 +582,6 @@ msgstr "უცნობი"
 msgid "Attachment"
 msgstr "მიმაგრებული ფაილი"
 
-msgid "Upload"
-msgstr "ატვირთვა"
-
 msgid "Picture"
 msgstr "სურათი"
 
@@ -567,9 +602,6 @@ msgstr "ოპერაცია"
 
 msgid "Continue"
 msgstr "გაგრძელება"
-
-msgid "Configure"
-msgstr "კონფიგურირება"
 
 msgid "Email"
 msgstr "ელ. ფოსტა"
@@ -607,9 +639,6 @@ msgstr "შეტყობინების სათაური."
 msgid "Number of columns"
 msgstr "სვეტების რაოდენობა"
 
-msgid "Create"
-msgstr "შექმნა"
-
 msgid "Separator"
 msgstr "გამყოფი"
 
@@ -640,8 +669,8 @@ msgstr ""
 "კონტენტის ტიპი შვილობილი "
 "გვერდებისთვის"
 
-msgid "All"
-msgstr "ყველა"
+msgid "Active"
+msgstr "აქტიური"
 
 msgid "Done"
 msgstr "დასრულება"
@@ -666,6 +695,9 @@ msgstr "სათაურის გადაწერა"
 
 msgid "CSS class"
 msgstr "CSS კლასი"
+
+msgid "Page"
+msgstr "გვერდი"
 
 msgid "View arguments"
 msgstr "არგუმენტების ნახვა"
@@ -807,9 +839,6 @@ msgstr "გამოქვეყნებული"
 
 msgid "Signature"
 msgstr "ხელმოწერა"
-
-msgid "Filter"
-msgstr "ფილტრი"
 
 msgid "Location"
 msgstr "ადგილმდებარეობა"
@@ -1137,9 +1166,6 @@ msgstr "ყველას მონიშვნა"
 msgid "User login"
 msgstr "მომხმარებლის ავტორიზაცია"
 
-msgid "Log in"
-msgstr "შესვლა"
-
 msgid "Link text"
 msgstr "ბმულის ტექსტი"
 
@@ -1189,9 +1215,6 @@ msgstr "ანონიმური"
 
 msgid "Provider"
 msgstr "პროვაიდერი"
-
-msgid "Install"
-msgstr "დაყენება"
 
 msgid "Save and edit"
 msgstr "შენახვა და რედაქტირება"
@@ -1249,11 +1272,6 @@ msgstr "კომენტარები"
 
 msgid "Full"
 msgstr "სრული"
-
-msgid "1 new"
-msgid_plural "@count new"
-msgstr[0] "1 ახალი"
-msgstr[1] "@count ახალი"
 
 msgid "Condition"
 msgstr "პირობა"
@@ -1868,9 +1886,6 @@ msgstr "დაიწერა"
 
 msgid "Hidden"
 msgstr "დამალული"
-
-msgid "Show"
-msgstr "ჩვენება"
 
 msgid "Site language"
 msgstr "საიტის ენა"
@@ -2535,8 +2550,8 @@ msgstr "გვერდი ვერ მოიძებნა"
 msgid "More help"
 msgstr "მეტი დახმარება"
 
-msgid "Sizes"
-msgstr "ზომები"
+msgid "Add terms"
+msgstr "ტერმინების დამატება"
 
 msgid "« first"
 msgstr "« პირველი"
@@ -2811,6 +2826,15 @@ msgstr "საიტის ინსტალაცია"
 msgid "Finish translations"
 msgstr "თარგმანის დასრულება"
 
+msgid ""
+"By default, dates in this site will be displayed in the chosen time "
+"zone."
+msgstr ""
+"ნაგულისხმევად, ამ საიტზე "
+"თარიღები გამოჩნდება "
+"არჩეული დროის სარტყლის "
+"შესაბამისად."
+
 msgid "Update notifications"
 msgstr "განახლების შეტყობინებები"
 
@@ -2929,9 +2953,6 @@ msgstr "სტილის სახელი"
 msgid "Update effect"
 msgstr "ეფექტის განახლება"
 
-msgid "Add effect"
-msgstr "ეფექტის დამატება"
-
 msgctxt "Long month name"
 msgid "January"
 msgstr "იანვარი"
@@ -3045,29 +3066,60 @@ msgid "Database system version"
 msgstr "მონაცემთა ბაზის ვერსია"
 
 msgid ""
-"A message has been sent to the new email address %email to confirm the "
-"change. Until confirmed, your current address will be used."
+"A valid email address. All emails from the system will be sent to this "
+"address. The email address is not made public and will only be used if "
+"you wish to receive a new password or wish to receive certain news or "
+"notifications by email."
 msgstr ""
-"ელ-ფოსტის ცვლილების "
-"დამადასტურებელი "
-"შეტყობინება "
-"გამოგზავნილია "
-"მისამართზე: %email. "
-"შეტყობინების "
-"დადასტურებამდე თქვენი "
-"ელ-ფოსტა რჩება უცვლელი."
+"შეიყვანეთ თქვენი ელ.ფოსტა. "
+"ყველა შეტყობინება "
+"მოგივათ მითითებულ "
+"მისამართზე. ინფორმაცია "
+"კონფიდენციალურია და "
+"იქნება გამოყენებული "
+"მხოლოდ თქვენი "
+"სურვილისამებრ ახალი "
+"პაროლის და "
+"შეტყობინებების "
+"მისაღებად."
 
-msgid "Donation status"
-msgstr "შემოწირულობის სტატუსი"
+msgid "Provide a password for the new account in both fields."
+msgstr "შეიყვანეთ პაროლი"
 
-msgid "Amount of money"
-msgstr "თანხა"
+msgid "Recommendations to make your password stronger:"
+msgstr ""
+"ძლიერი პაროლისთვის "
+"გაითვალისწინეთ:"
 
-msgid "Next payment date"
-msgstr "მომდევნო გადახდის თარიღი"
+msgid "Make it at least 12 characters"
+msgstr "გახადეთ 12 სიმბოლოზე მეტი"
 
-msgid "Currency code"
-msgstr "ვალუტის კოდი"
+msgid "Add lowercase letters"
+msgstr ""
+"დაამატეთ დაბალი "
+"რეგისტრის ასოები"
+
+msgid "Add uppercase letters"
+msgstr ""
+"დაამატეთ მაღალი "
+"რეგისტრის ასოები "
+
+msgid "Add numbers"
+msgstr "დაამატეთ ციფრები"
+
+msgid "Add punctuation"
+msgstr "დაამატეთ სასვენი ნიშნები"
+
+msgid "Make it different from your username"
+msgstr ""
+"პაროლი არ უნდა ემთხვეოდეს "
+"მომხმარებლის სახელს"
+
+msgid "Weak"
+msgstr "სუსტი"
+
+msgid "Strong"
+msgstr "ძლიერი"
 
 msgid "Main navigation"
 msgstr "Main navigation"
@@ -3356,99 +3408,8 @@ msgstr ""
 "\r\n"
 "--  [site:name] team"
 
-msgid "Active"
-msgstr "აქტიური"
-
-msgid "Enter your email address or username."
-msgstr ""
-"შეიყვანეთ თქვენი "
-"ელ.ფოსტის მისამართი"
-
-msgid "Email or username"
-msgstr "შეიყვანეთ ელ.ფოსტა "
-
-msgid "Enter the password that accompanies your email address."
-msgstr "შეიყვანეთ პაროლი "
-
-msgid "Save"
-msgstr "შენახვა"
-
-msgid "Create new account"
-msgstr "რეგისტრაცია"
-
-msgid "Reset your password"
-msgstr "პაროლის აღდგენა"
-
-msgid "Hierarchy"
-msgstr "იერარქია"
-
-msgid "Add terms"
-msgstr "ტერმინების დამატება"
-
-msgid ""
-"By default, dates in this site will be displayed in the chosen time "
-"zone."
-msgstr ""
-"ნაგულისხმევად, ამ საიტზე "
-"თარიღები გამოჩნდება "
-"არჩეული დროის სარტყლის "
-"შესაბამისად."
-
-msgid ""
-"A valid email address. All emails from the system will be sent to this "
-"address. The email address is not made public and will only be used if "
-"you wish to receive a new password or wish to receive certain news or "
-"notifications by email."
-msgstr ""
-"შეიყვანეთ თქვენი ელ.ფოსტა. "
-"ყველა შეტყობინება "
-"მოგივათ მითითებულ "
-"მისამართზე. ინფორმაცია "
-"კონფიდენციალურია და "
-"იქნება გამოყენებული "
-"მხოლოდ თქვენი "
-"სურვილისამებრ ახალი "
-"პაროლის და "
-"შეტყობინებების "
-"მისაღებად."
-
-msgid "Provide a password for the new account in both fields."
-msgstr "შეიყვანეთ პაროლი"
-
-msgid "Recommendations to make your password stronger:"
-msgstr ""
-"ძლიერი პაროლისთვის "
-"გაითვალისწინეთ:"
-
-msgid "Make it at least 12 characters"
-msgstr "გახადეთ 12 სიმბოლოზე მეტი"
-
-msgid "Add lowercase letters"
-msgstr ""
-"დაამატეთ დაბალი "
-"რეგისტრის ასოები"
-
-msgid "Add uppercase letters"
-msgstr ""
-"დაამატეთ მაღალი "
-"რეგისტრის ასოები "
-
-msgid "Add numbers"
-msgstr "დაამატეთ ციფრები"
-
-msgid "Add punctuation"
-msgstr "დაამატეთ სასვენი ნიშნები"
-
-msgid "Make it different from your username"
-msgstr ""
-"პაროლი არ უნდა ემთხვეოდეს "
-"მომხმარებლის სახელს"
-
-msgid "Weak"
-msgstr "სუსტი"
-
-msgid "Strong"
-msgstr "ძლიერი"
+msgid "All"
+msgstr "ყველა"
 
 msgid "News"
 msgstr "სიახლეები"
@@ -3460,6 +3421,9 @@ msgstr ""
 "პაროლის აღდგენის "
 "ინსტრუქციის სანახავად "
 "შეამოწმეთ თქვენი ელ.ფოსტა"
+
+msgid "Show"
+msgstr "ჩვენება"
 
 msgid "Current password"
 msgstr "მიმდინარე პაროლი"
@@ -3485,6 +3449,14 @@ msgstr ""
 "არასწორი სახელი ან პაროლი. "
 "<a href=\":password\">დაგავიწყდა "
 "პაროლი?</a>"
+
+msgid "1 new"
+msgid_plural "@count new"
+msgstr[0] "1 ახალი"
+msgstr[1] "@count ახალი"
+
+msgid "Sizes"
+msgstr "ზომები"
 
 msgid ""
 "Your current password is missing or incorrect; it's required to change "
@@ -3920,6 +3892,19 @@ msgstr "ახალი ელ.ფოსტა"
 msgid "Enter new email"
 msgstr "შეიყვანეთ ახალი ელ.ფოსტა"
 
+msgid ""
+"A message has been sent to the new email address %email to confirm the "
+"change. Until confirmed, your current address will be used."
+msgstr ""
+"ელ-ფოსტის ცვლილების "
+"დამადასტურებელი "
+"შეტყობინება "
+"გამოგზავნილია "
+"მისამართზე: %email. "
+"შეტყობინების "
+"დადასტურებამდე თქვენი "
+"ელ-ფოსტა რჩება უცვლელი."
+
 msgid "Your email address has been updated to %mail"
 msgstr ""
 "თქვენი განახლებული "
@@ -3980,6 +3965,9 @@ msgstr "დააფინანსე პოლიტიკოსი"
 msgid "Ged &#37;"
 msgstr "Ged-ების &#37;"
 
+msgid "Donation"
+msgstr "შემოწირულობა"
+
 msgid "Disposable"
 msgstr "ერთჯერადი"
 
@@ -4000,6 +3988,9 @@ msgstr "პოლიტიკოსის შემოწირულობა"
 
 msgid "Donation settings"
 msgstr "გადახდების კონფიგურაცია"
+
+msgid "Donation status"
+msgstr "შემოწირულობის სტატუსი"
 
 msgid "Multiple"
 msgstr "მრავალჯერადი"
@@ -4031,6 +4022,12 @@ msgid "Please choose Donation aim OR Donation to politician"
 msgstr ""
 "აირჩიეთ დაფინანსების "
 "მიზანი ან პოლიტიკოსი"
+
+msgid "Amount of money"
+msgstr "თანხა"
+
+msgid "Currency code"
+msgstr "ვალუტის კოდი"
 
 msgid "Transaction failed ,try again"
 msgstr ""
@@ -4098,6 +4095,9 @@ msgstr "ფავორიტი ვიდეო"
 
 msgid "Donated amount"
 msgstr "შემოწირული თანხა"
+
+msgid "Next payment date"
+msgstr "მომდევნო გადახდის თარიღი"
 
 msgid "Regular donation settings"
 msgstr ""
@@ -4314,6 +4314,25 @@ msgstr "გთხოვთ შეიყვანოთ თანხა"
 msgid "Currency"
 msgstr "ვალუტა"
 
+msgid "You can't be your referral's referral."
+msgstr ""
+"თქვენ ვერ გახდებით თქვენი "
+"რეფერალის რეფერალი"
+
+msgid "Join Partners"
+msgstr "გაწევრიანდი პარტნიორებში"
+
+msgid "Join Group"
+msgstr "გაწევრიანდი ჯგუფში"
+
+msgid "Please choose Donation aim"
+msgstr ""
+"აირჩიეთ დაფინანსების "
+"მიზანი"
+
+msgid "Please choose the Politician"
+msgstr "აირჩიეთ პოლიტიკოსი"
+
 msgid "I agree on publicity"
 msgstr "თანახმა ვარ საჯაროობაზე"
 
@@ -4327,14 +4346,6 @@ msgstr ""
 "მონიშნული უნდა გქონდეთ "
 "\"თანახმა ვარ საჯაროობაზე\"."
 
-msgid "Join Group"
-msgstr "გაწევრიანდი ჯგუფში"
-
-msgid "You can't be your referral's referral."
-msgstr ""
-"თქვენ ვერ გახდებით თქვენი "
-"რეფერალის რეფერალი"
-
-msgid "Join Partners"
-msgstr "გაწევრიანდი პარტნიორებში"
+msgid "Benefits"
+msgstr "სარგებელი"
 
